<resources>
    <string name="app_name">VaccinsOs</string>
    <string name="connexion_username">Nom d\'utilisateur</string>
    <string name="connexion_password">Mot de passe</string>
    <string name="connexion_button">CONNEXION</string>
    <string name="namee">Bonjour %s !</string>
    <string name="nombre_vaccination">Nombre de vaccination</string>
    <string name="voir_stock_button">Stock</string>
    <string name="planifier_injection_button">injection</string>
    <string name="voir_planing_button">PLANNING</string>
    <string name="Stock">Stock</string>
    <string name="text_ASTRA">Nombre de vaccin AstraZeneca</string>
    <string name="nb_ASTRA">%s</string>
    <string name="cons_ASTRA">Consommation des vaccins</string>
    <string name="text_MORDERNA">Nombre de vaccin Moderna</string>
    <string name="nb_MORDERNA">%s</string>
    <string name="text_PFIZER">Nombre de vaccin Pfizer</string>
    <string name="nb_PFIZER">%s</string>
    <string name="text_INJECTION">Injection</string>
    <string name="textchoixcreneau">Choisir un créneau</string>
    <string name="textchoixvaccin">Choisir un vaccin</string>
    <string name="textnompatient">Nom du patient</string>
    <string name="textprenompatient">Prénom du patient</string>
    <string name="textpmailpatient">Mail du patient</string>
    <string name="textptelpatient">Numéro de téléphone du patient</string>
    <string name="validate">VALIDER</string>
    <string name="planning">Planning</string>
    <string name="textChoixDate">Choix de la date</string>
    <string name="choixDate">00/00/0000</string>
    <string name="textChoixMedecin">Choisir un medecin</string>
    <string name="administration">Administration</string>
    <string name="ajoutMembre">Ajouter membre</string>
    <string name="ajoutVaccin">Ajouter vaccin</string>
    <string name="ajoutSoignant">Ajouter soignant</string>
    <string name="suppMembre">Supprimer membre</string>
    <string name="reception">Reception</string>
    <string name="textAjoutermembre">Ajouter un membre</string>
    <string name="nomMembre">Nom</string>
    <string name="prenomMembre">Prénom</string>
    <string name="mailMembre">E-mail</string>
    <string name="textTypevaccin">Type de vaccin:</string>
    <string name="typeVaccin">Ex: AstraZeneca </string>
    <string name="textQuantiteVaccin">Quantité:</string>
    <string name="quantiteFlacon">Nombre de flacons</string>
    <string name="ajouterProduit">Ajouter au stock</string>
    <string name="receptiontitre">Réception</string>
    <string name="textsupprimerMembre">Supprimer membre</string>
    <string name="text_date_planing_">Voici les rendez-vous du :</string>
    <string name="text_info_patient_planning">%s %s</string>
    <string name="creneau_patient_paning">Créneau : </string>
    <string name="soignant_planning">Soignant : </string>
    <string name="vaccin_planning">Vaccin : </string>
    <string name="text_date_planing">Liste des rendez-vous du : </string>
    <string name="text_nom_stock">Nombre de dose </string>
    <string name="text_nom_vaccin">Nom du vaccin</string>
    <string name="text_nb_dose_flacon_vaccin">Nombre de dose par flacon</string>
    <string name="textajouterunvaccin">Ajouter un vaccin</string>
    <string name="textNomSoignant">Nom du soignant</string>
    <string name="textPrenomSoignant">Prénom du soignant</string>
    <string name="text_date_planing_date">27/03/2021</string>
    <string name="textEmailSupp">Mail :</string>
</resources>