<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".administration.AjoutMembreActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".administration.AjoutMembreActivity"
        tools:layout_editor_absoluteX="-140dp"
        tools:layout_editor_absoluteY="-115dp">


        <View
            android:id="@+id/view6"
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_marginTop="56dp"
            android:background="@color/principal_blue"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <include layout="@layout/navbar_layout"
            />

        <TextView
            android:id="@+id/textajouterunvaccin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/textajouterunvaccin"
            android:textColor="@color/black"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editNomVaccin"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:layout_marginTop="64dp"
            android:background="@drawable/shape_input_droit"
            android:hint="@string/text_nom_vaccin"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textajouterunvaccin" />

        <EditText
            android:id="@+id/editNombreDeDoseParFlacon"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/shape_input_droit"
            android:hint="@string/text_nb_dose_flacon_vaccin"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNomVaccin" />


        <Button
            android:id="@+id/buttonAjoutVaccin"
            android:layout_width="230dp"
            android:layout_height="44dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/shape_input"
            android:text="@string/ajoutVaccin"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNombreDeDoseParFlacon" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>